# bonsai

./: CHANGES.md  LICENSE.md  README.md  bonsai.opam  changelog.md  for_bonsai_devs.md
examples/bonsai_guide_code/: bonsai_types.ml  bonsai_types.mli  control_flow_examples.ml  css_examples.ml  css_examples.mli  dune  dynamism_examples.ml  edge_examples.ml  edge_triggered_examples.ml  effect_examples.ml  effect_stale_examples.ml  flow_examples.ml  form_examples.ml  higher_order_examples.ml  incrementality_examples.ml  index.html  intro_examples.ml  intro_examples.mli  lifecycle_examples.ml  main.ml  resize_iframe.js  rpc_examples.ml  scope_model_examples.ml  state_examples.ml  state_examples.mli  state_reset_examples.ml  style.css  time_examples.ml  url_var_examples.ml  util.ml  util.mli  vdom_examples.ml
examples/bonsai_view/: dune  gallery.ml  gallery.mli  index.html  main.ml  style.css  style.ml  theme_picker.ml  theme_picker.mli
examples/element_size_util/: custom.css  dune  index.html  main.ml  style.ml  style.mli
examples/favicon_svg/: custom.css  dune  index.html  main.ml  main.mli
examples/notifications/: README.md  app_style.css  dune  index.html  main.ml
examples/sexp_grammar/: dune  index.html  main.ml  type.ml  type.mli  type_intf.ml
examples/snips_demo/: dune  index.html  main.ml  style.css
extra/lib/: bonsai_extra.ml  dune
extra/proc/: bonsai_extra_proc.ml  bonsai_extra_proc.mli  dune
src/: action.ml  action.mli  annotate_incr.ml  annotate_incr.mli  apply_action.ml  apply_action.mli  apply_action_context.ml  apply_action_context.mli  assoc.ml  assoc.mli  bonsai.ml  bonsai.mli  bonsai_intf.ml  component.ml  component.mli  component_intf.ml  compose.ml  compose.mli  computation.ml  computation.mli  const.ml  const.mli  constant_fold.ml  constant_fold.mli  cont.ml  cont.mli  cutoff.ml  cutoff.mli  dune  effect.ml  effect.mli  enable_computation_watcher.ml  enable_computation_watcher.mli  enable_free_variable_monitor.ml  enable_free_variable_monitor.mli  enum_types.ml  enum_types.mli  environment.ml  environment.mli  eval.ml  (+104 more)
src/arrow_deprecated/: bonsai_arrow_deprecated.ml  bonsai_arrow_deprecated.mli  dune
src/driver/: bonsai_driver.ml  bonsai_driver.mli  dune  instrumentation.ml  instrumentation.mli
src/introspection_protocol/: bonsai_bug_protocol.ml  bonsai_bug_protocol.mli  bonsai_introspection_protocol.ml  bonsai_introspection_protocol.mli  dune  incr_node_protocol.ml  rpc_effect_protocol.ml  rpc_effect_protocol.mli  source_code_position_with_quickcheck.ml  startup_timing_protocol.ml  startup_timing_protocol.mli
src/private_base/: action.ml  action.mli  annotate_incr.ml  annotate_incr.mli  applicative.ml  bonsai_private_base.ml  computation.ml  computation_watcher.ml  dune  environment.ml  fix_id.mli  input.ml  input.mli  keyed.ml  lazy_inject.ml  lifecycle.ml  lifecycle.mli  may_contain.ml  meta.ml  module_types.ml  path.ml  snapshot.ml  snapshot.mli  timer.ml  timer.mli  trampoline.mli  type_id_set.ml  type_id_set.mli  value.ml  value.mli
src/private_eval/: annotate_incr.ml  annotate_incr.mli  applicative.ml  apply_action_context.ml  apply_action_context.mli  bonsai_private_eval.ml  computation.ml  computation_watcher.ml  computation_watcher.mli  dune  environment.mli  eval.ml  eval_assoc.ml  eval_assoc.mli  eval_assoc_on.ml  eval_assoc_on.mli  eval_assoc_simple.ml  eval_assoc_simple.mli  eval_computation_watcher.ml  eval_computation_watcher.mli  eval_fetch.ml  eval_fetch.mli  eval_fix.ml  eval_fix.mli  eval_lazy.ml  eval_lazy.mli  eval_leaf0.ml  eval_leaf0.mli  eval_leaf1.ml  eval_leaf1.mli  eval_leaf_incr.ml  eval_leaf_incr.mli  eval_lifecycle.ml  eval_lifecycle.mli  eval_monitor_free_variables.ml  eval_monitor_free_variables.mli  eval_path.ml  eval_path.mli  eval_return.ml  eval_return.mli  (+45 more)
src/private_gather/: bonsai_private_gather.ml  dune  gather.ml  gather.mli  gather_assoc.ml  gather_assoc.mli  gather_assoc_on.ml  gather_assoc_on.mli  gather_assoc_simple.ml  gather_assoc_simple.mli  gather_computation_watcher.ml  gather_computation_watcher.mli  gather_fetch.ml  gather_fetch.mli  gather_fix.ml  gather_fix.mli  gather_lazy.ml  gather_lazy.mli  gather_leaf0.ml  gather_leaf0.mli  gather_leaf1.ml  gather_leaf1.mli  gather_leaf_incr.ml  gather_leaf_incr.mli  gather_lifecycle.ml  gather_lifecycle.mli  gather_path.ml  gather_path.mli  gather_return.ml  gather_return.mli  gather_store.ml  gather_store.mli  gather_sub.ml  gather_sub.mli  gather_switch.ml  gather_switch.mli  gather_with_model_resetter.ml  gather_with_model_resetter.mli  gather_wrap.ml  gather_wrap.mli
src/proc/: bonsai_proc.ml  bonsai_proc.mli  dune  import.ml  proc.ml  proc.mli  proc_intf.ml
src/protocol/: bonsai_protocol.ml  bonsai_protocol.mli  dune
stats/: basic_prt.ml  basic_prt.mli  big_assoc.ml  dune
test/of_bonsai_itself/: big_computation_regression_util.ml  big_computation_regression_util.mli  dune  import.ml  path_test.ml  test_action_stabilization.ml  test_action_stabilization.mli  test_constant_fold.ml  test_constant_fold.mli  test_cont_bonsai.ml  test_cont_store_named_in_a_ref.ml  test_cse.ml  test_cse.mli  test_cse_cont.ml  test_dot.ml  test_effect_throttling.ml  test_enum_glitches_regression.ml  test_handle_compute_lazy.ml  test_legacy_bonsai.ml  test_linter.ml  test_match_sub_runtime_error.ml  test_model_action_and_input_shapes.ml  test_one_at_a_time.ml  test_proc_bonsai.ml  test_proc_store_named_in_a_ref.ml  test_value_stability.ml
web/: bonsai_web.ml  dune  effect.ml  effect.mli  for_introspection.ml  for_introspection.mli  forward_performance_entries.ml  forward_performance_entries.mli  import.ml  import.mli  persistent_var.ml  persistent_var.mli  rpc_effect.ml  rpc_effect.mli  start.ml  start.mli  to_incr_dom.ml  to_incr_dom.mli  to_incr_dom_intf.ml  util.ml  util.mli
web_test/: bonsai_web_test.ml  bonsai_web_test.mli  callback_tests.ml  driver.ml  driver.mli  dune  external_event.ml  external_event.mli  flush_async_and_bonsai_tests.ml  helpers.ml  helpers_intf.ml  import.ml  proc.ml  proc.mli  rpc_effect_tests.ml  vdom_based_tests.ml
(+1275 files in other folders)
