opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bonsai"
bug-reports: "https://github.com/janestreet/bonsai/issues"
dev-repo: "git+https://github.com/janestreet/bonsai.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bonsai/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "async_durable"
  "async_extra"
  "async_js"
  "async_kernel"
  "async_rpc_kernel"
  "async_rpc_websocket"
  "babel"
  "base"
  "core"
  "core_bench"
  "core_kernel"
  "core_unix"
  "expect_test_helpers_core"
  "fuzzy_match"
  "incr_dom"
  "incr_map"
  "indentation_buffer"
  "ordinal_abbreviation"
  "patdiff"
  "polling_state_rpc"
  "ppx_css"
  "ppx_here"
  "ppx_jane"
  "ppx_let"
  "ppx_pattern_bind"
  "ppx_typed_fields"
  "profunctor"
  "sexp_grammar"
  "sexplib0"
  "textutils"
  "virtual_dom"
  "base64"                   {>= "3.4.0"}
  "cohttp-async"             {>= "2.5.7" & < "3.0.0" | >= "5.1.1" & < "6.0.0"}
  "dune"                     {>= "2.0.0"}
  "gen_js_api"               {>= "1.0.8"}
  "js_of_ocaml"              {>= "5.1.1"}
  "js_of_ocaml-ppx"          {>= "5.1.1"}
  "ocaml-embed-file"
  "ppxlib"                   {>= "0.28.0"}
  "re"                       {>= "1.8.0"}
  "uri"                      {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for building dynamic webapps, using Js_of_ocaml"
description: "
Bonsai is a library for building reusable UI components inside an
     Incremental-style UI framework such as Incr_dom or React.
"
