(library
 (name bonsai)
 (libraries abstract_algebra bonsai_private_eval core incr_map incremental
   core_kernel.reversed_list virtual_dom.ui_effect bonsai_concrete.ui_incr
   bonsai_concrete.ui_time_source)
 (preprocess
  (pps ppx_jane ppx_pattern_bind ppx_bonsai
    -for-bonsai-internals-use-location-in-scope ppxlib.traverse))
 (public_name bonsai))
