(executables (names big_assoc basic_prt)
 (libraries bonsai core_kernel.core bonsai_test
  bonsai_web_ui_partial_render_table_test bonsai_web_ui_partial_render_table)
 (preprocess (pps ppx_jane)))

(rule (targets big_assoc.svg) (deps big_assoc.exe)
 (action (bash "./%{deps} | dot -T svg -o%{targets}")))

(rule (targets big_assoc_node_count.txt) (mode promote) (deps big_assoc.exe)
 (action (bash "./%{deps} | grep 'label' | wc -l > %{targets}")))

(rule (targets basic_prt.svg) (deps basic_prt.bc.js)
 (action (bash "%{NODE} ./%{deps} | dot -T svg -o%{targets}")))

(rule (targets basic_prt_node_count.txt) (mode promote)
 (deps basic_prt.bc.js)
 (action (bash "%{NODE} ./%{deps} | grep 'label' | wc -l > %{targets}")))

(alias (name DEFAULT)
 (deps basic_prt.svg basic_prt_node_count.txt big_assoc.svg
  big_assoc_node_count.txt))