(executables
 (modes byte exe)
 (names main)
 (libraries bonsai_web async_js core bonsai_web_ui_form legacy_diffable
   timezone bonsai_guide_code_lib bonsai_web_ui_url_var)
 (preprocess
  (pps js_of_ocaml-ppx ppx_css ppx_bonsai ppx_jane ppx_typed_fields))
 (js_of_ocaml
  (javascript_files ./resize_iframe.js)))
