(executables (names main)
 (libraries async_js async_kernel bonsai_web core favicon_svg
  virtual_dom.input_widgets)
 (preprocess (pps ppx_jane js_of_ocaml-ppx ppx_pattern_bind)))

(alias (name javascript-DEFAULT) (deps style.css))

(rule (targets style.css)
 (deps %{workspace_root}/lib/jane_web_style/src/css/style-6.css custom.css)
 (action (bash "cat %{deps} > %{targets}")))