(executables
 (modes byte exe)
 (names main)
 (libraries async_js bonsai_web ppx_css.inline_css kado
   bonsai_experimental_snips)
 (preprocess
  (pps ppx_jane ppx_bonsai)))

(rule
 (targets style.ml style.mli style__generated.ml style__generated.mli)
 (deps style.css)
 (action
  (bash "%{bin:css_inliner} %{deps}")))
