(library
 (name bonsai_arrow_deprecated)
 (public_name bonsai.arrow_deprecated)
 (libraries bonsai bonsai_private_base bonsai_proc core incr_map incremental
   virtual_dom.ui_effect bonsai_concrete.ui_incr
   bonsai_concrete.ui_time_source)
 (preprocess
  (pps ppx_jane ppx_pattern_bind ppx_bonsai
    -for-bonsai-internals-use-location-in-scope ppxlib.traverse)))
