(library
 (name bonsai_private_base)
 (libraries balance_list_tree core incr_map incremental
   core_kernel.reversed_list virtual_dom.ui_effect bonsai_concrete.ui_incr
   bonsai_concrete.metrics bonsai_concrete.ui_time_source uopt)
 (preprocess
  (pps ppx_jane ppx_pattern_bind))
 (public_name bonsai.private_base))
