(library
 (name bonsai_web_test_of_bonsai_itself)
 (public_name bonsai.web_test_of_bonsai_itself)
 (libraries bonsai_web bonsai_web_test bonsai_extra async_js.async_test core
   legacy_diffable expect_test_helpers_core patdiff.expect_test_patdiff
   bonsai_test incr_map bonsai_web_ui_drag_and_drop async_rpc_kernel async_js)
 (preprocess
  (pps ppx_jane ppx_pattern_bind ppx_bonsai)))

(rule
 (targets test_legacy_bonsai.ml)
 (deps ../../test/of_bonsai_itself/test_legacy_bonsai.ml)
 (action
  (bash "cp %{deps} %{targets}")))

(rule
 (targets test_legacy_bonsai.mli)
 (deps ../../test/of_bonsai_itself/test_legacy_bonsai.mli)
 (action
  (bash "cp %{deps} %{targets}")))

(rule
 (targets test_proc_bonsai.ml)
 (deps ../../test/of_bonsai_itself/test_proc_bonsai.ml)
 (action
  (bash "cp %{deps} %{targets}")))

(rule
 (targets test_proc_bonsai.mli)
 (deps ../../test/of_bonsai_itself/test_proc_bonsai.mli)
 (action
  (bash "cp %{deps} %{targets}")))

(alias
 (name DEFAULT)
 (deps test_legacy_bonsai.ml test_legacy_bonsai.mli test_proc_bonsai.ml
   test_proc_bonsai.mli))
