(library
 (name bonsai_web_test_of_bonsai_itself)
 (public_name bonsai.web_test_of_bonsai_itself)
 (libraries textutils.ascii_table_kernel bonsai_web bonsai_web_test
   bonsai_introspection_protocol bonsai_test_of_bonsai_itself
   async_js.async_test core legacy_diffable expect_test_helpers_core
   patdiff.expect_test_patdiff bonsai_test incr_map
   bonsai_web_ui_drag_and_drop async_rpc_kernel bonsai_web_test_async
   async_js re)
 (preprocess
  (pps ppx_jane ppx_pattern_bind ppx_bonsai js_of_ocaml-ppx ppx_diff.ppx_diff
    streamable.ppx)))
