(library (name feather_icon) (public_name bonsai.feather_icon)
 (libraries core virtual_dom) (preprocess (pps ppx_jane)))

(rule (targets paths.ml paths.mli)
 (deps %{bin:ocaml-embed-file} paths/activity.svg paths/corner-down-left.svg
  paths/link.svg paths/shopping-bag.svg paths/airplay.svg
  paths/corner-down-right.svg paths/list.svg paths/shopping-cart.svg
  paths/alert-circle.svg paths/corner-left-down.svg paths/loader.svg
  paths/shuffle.svg paths/alert-octagon.svg paths/corner-left-up.svg
  paths/lock.svg paths/sidebar.svg paths/alert-triangle.svg
  paths/corner-right-down.svg paths/log-in.svg paths/skip-back.svg
  paths/align-center.svg paths/corner-right-up.svg paths/log-out.svg
  paths/skip-forward.svg paths/align-justify.svg paths/corner-up-left.svg
  paths/mail.svg paths/slack.svg paths/align-left.svg
  paths/corner-up-right.svg paths/map-pin.svg paths/slash.svg
  paths/align-right.svg paths/cpu.svg paths/map.svg paths/sliders.svg
  paths/anchor.svg paths/credit-card.svg paths/maximize-2.svg
  paths/smartphone.svg paths/aperture.svg paths/crop.svg paths/maximize.svg
  paths/smile.svg paths/archive.svg paths/crosshair.svg paths/meh.svg
  paths/speaker.svg paths/arrow-down-circle.svg paths/database.svg
  paths/menu.svg paths/square.svg paths/arrow-down-left.svg paths/delete.svg
  paths/message-circle.svg paths/star.svg paths/arrow-down-right.svg
  paths/disc.svg paths/message-square.svg paths/stop-circle.svg
  paths/arrow-down.svg paths/divide-circle.svg paths/mic-off.svg
  paths/sunrise.svg paths/arrow-left-circle.svg paths/divide-square.svg
  paths/mic.svg paths/sunset.svg paths/arrow-left.svg paths/divide.svg
  paths/minimize-2.svg paths/sun.svg paths/arrow-right-circle.svg
  paths/dollar-sign.svg paths/minimize.svg paths/tablet.svg
  paths/arrow-right.svg paths/download-cloud.svg paths/minus-circle.svg
  paths/tag.svg paths/arrow-up-circle.svg paths/download.svg
  paths/minus-square.svg paths/target.svg paths/arrow-up-left.svg
  paths/dribbble.svg paths/minus.svg paths/terminal.svg
  paths/arrow-up-right.svg paths/droplet.svg paths/monitor.svg
  paths/thermometer.svg paths/arrow-up.svg paths/edit-2.svg paths/moon.svg
  paths/thumbs-down.svg paths/at-sign.svg paths/edit-3.svg
  paths/more-horizontal.svg paths/thumbs-up.svg paths/award.svg
  paths/edit.svg paths/more-vertical.svg paths/toggle-left.svg
  paths/bar-chart-2.svg paths/external-link.svg paths/mouse-pointer.svg
  paths/toggle-right.svg paths/bar-chart.svg paths/eye-off.svg paths/move.svg
  paths/tool.svg paths/battery-charging.svg paths/eye.svg paths/music.svg
  paths/trash-2.svg paths/battery.svg paths/facebook.svg
  paths/navigation-2.svg paths/trash.svg paths/bell-off.svg
  paths/fast-forward.svg paths/navigation.svg paths/trello.svg paths/bell.svg
  paths/feather.svg paths/octagon.svg paths/trending-down.svg
  paths/bluetooth.svg paths/figma.svg paths/package.svg paths/trending-up.svg
  paths/bold.svg paths/file-minus.svg paths/paperclip.svg paths/triangle.svg
  paths/bookmark.svg paths/file-plus.svg paths/pause-circle.svg
  paths/truck.svg paths/book-open.svg paths/file.svg paths/pause.svg
  paths/tv.svg paths/book.svg paths/file-text.svg paths/pen-tool.svg
  paths/twitch.svg paths/box.svg paths/film.svg paths/percent.svg
  paths/twitter.svg paths/briefcase.svg paths/filter.svg paths/phone-call.svg
  paths/type.svg paths/calendar.svg paths/flag.svg paths/phone-forwarded.svg
  paths/umbrella.svg paths/camera-off.svg paths/folder-minus.svg
  paths/phone-incoming.svg paths/underline.svg paths/camera.svg
  paths/folder-plus.svg paths/phone-missed.svg paths/unlock.svg
  paths/cast.svg paths/folder.svg paths/phone-off.svg paths/upload-cloud.svg
  paths/check-circle.svg paths/framer.svg paths/phone-outgoing.svg
  paths/upload.svg paths/check-square.svg paths/frown.svg paths/phone.svg
  paths/user-check.svg paths/check.svg paths/gift.svg paths/pie-chart.svg
  paths/user-minus.svg paths/chevron-down.svg paths/git-branch.svg
  paths/play-circle.svg paths/user-plus.svg paths/chevron-left.svg
  paths/git-commit.svg paths/play.svg paths/users.svg paths/chevron-right.svg
  paths/github.svg paths/plus-circle.svg paths/user.svg
  paths/chevrons-down.svg paths/gitlab.svg paths/plus-square.svg
  paths/user-x.svg paths/chevrons-left.svg paths/git-merge.svg paths/plus.svg
  paths/video-off.svg paths/chevrons-right.svg paths/git-pull-request.svg
  paths/pocket.svg paths/video.svg paths/chevrons-up.svg paths/globe.svg
  paths/power.svg paths/voicemail.svg paths/chevron-up.svg paths/grid.svg
  paths/printer.svg paths/volume-1.svg paths/chrome.svg paths/hard-drive.svg
  paths/radio.svg paths/volume-2.svg paths/circle.svg paths/hash.svg
  paths/refresh-ccw.svg paths/volume.svg paths/clipboard.svg
  paths/headphones.svg paths/refresh-cw.svg paths/volume-x.svg
  paths/clock.svg paths/heart.svg paths/repeat.svg paths/watch.svg
  paths/cloud-drizzle.svg paths/help-circle.svg paths/rewind.svg
  paths/wifi-off.svg paths/cloud-lightning.svg paths/hexagon.svg
  paths/rotate-ccw.svg paths/wifi.svg paths/cloud-off.svg paths/home.svg
  paths/rotate-cw.svg paths/wind.svg paths/cloud-rain.svg paths/image.svg
  paths/rss.svg paths/x-circle.svg paths/cloud-snow.svg paths/inbox.svg
  paths/save.svg paths/x-octagon.svg paths/cloud.svg paths/info.svg
  paths/scissors.svg paths/x-square.svg paths/codepen.svg paths/instagram.svg
  paths/search.svg paths/x.svg paths/codesandbox.svg paths/italic.svg
  paths/send.svg paths/youtube.svg paths/code.svg paths/key.svg
  paths/server.svg paths/zap-off.svg paths/coffee.svg paths/layers.svg
  paths/settings.svg paths/zap.svg paths/columns.svg paths/layout.svg
  paths/share-2.svg paths/zoom-in.svg paths/command.svg paths/life-buoy.svg
  paths/share.svg paths/zoom-out.svg paths/compass.svg paths/link-2.svg
  paths/shield-off.svg paths/copy.svg paths/linkedin.svg paths/shield.svg)
 (action (bash "%{deps} -output paths")) (mode fallback))