(executables
 (modes byte exe)
 (names graph_generator)
 (libraries bonsai_examples_mouse_position_lib bonsai)
 (preprocess
  (pps ppx_jane ppx_pattern_bind)))

(rule
 (targets graph.svg)
 (deps graph_generator.bc.js)
 (action
  (bash "%{NODE} %{deps} | dot -T svg -ograph.svg")))

(alias
 (name DEFAULT)
 (deps graph.svg))
