(executables (names bonsai_form_example)
 (libraries core_kernel bonsai_form_experimental bonsai_web vdom_layout)
 (preprocess (pps ppx_jane)))

(rule (targets jane-web-style.css)
 (deps %{workspace_root}/lib/jane_web_style/src/css/style-4.css)
 (action (bash "cat %{deps} > %{targets}")))

(alias (name DEFAULT) (deps jane-web-style.css))