(library (name bonsai_web_ui_form) (public_name bonsai.web_ui_form)
 (preprocess (pps js_of_ocaml-ppx ppx_jane ppx_css))
 (libraries bonsai bonsai_web bonsai_extra bonsai_web_ui_extendy
  bonsai_web_ui_file bonsai_web_ui_file_from_web_file
  bonsai_web_ui_freeform_multiselect bonsai_web_ui_multi_select
  bonsai_web_ui_typeahead bonsai_web_ui_reorderable_list
  bonsai_web_ui_query_box ppx_typed_fields.typed_fields_lib
  ppx_typed_fields.typed_field_map ppx_typed_fields.typed_variants_lib core
  core_unix.profunctor virtual_dom.input_widgets))