(library
 (name bonsai_web_ui_partial_render_table)
 (public_name bonsai.web_ui_partial_render_table)
 (libraries bonsai_web_ui_scroll_utilities vdom_node_with_map_children
   bonsai_web bonsai_extra core incr_map.collate
   bonsai_web_ui_element_size_hooks
   bonsai_web_ui_partial_render_table_protocol)
 (preprocess
  (pps ppx_css js_of_ocaml-ppx ppx_jane ppx_pattern_bind ppx_bonsai)))
