(library (name kado) (public_name bonsai.kado)
 (libraries core virtual_dom bonsai bonsai_web_ui_view)
 (preprocess (pps ppx_jane ppx_css ppx_bonsai)))

(rule
 (targets tabs_style.ml tabs_style.mli tabs_style__generated.ml
  tabs_style__generated.mli)
 (deps tabs_style.css) (action (bash "%{bin:css_inliner} %{deps}")))

(rule
 (targets table_style.ml table_style.mli table_style__generated.ml
  table_style__generated.mli)
 (deps table_style.css) (action (bash "%{bin:css_inliner} %{deps}")))

(rule
 (targets devbar_style.ml devbar_style.mli devbar_style__generated.ml
  devbar_style__generated.mli)
 (deps devbar_style.css) (action (bash "%{bin:css_inliner} %{deps}")))

(rule
 (targets app_style.ml app_style.mli app_style__generated.ml
  app_style__generated.mli)
 (deps app_style.css) (action (bash "%{bin:css_inliner} %{deps}")))

(rule
 (targets button_style.ml button_style.mli button_style__generated.ml
  button_style__generated.mli)
 (deps button_style.css) (action (bash "%{bin:css_inliner} %{deps}")))